kuberneties/1-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-api-deployment 
  namespace: testing-api
  labels:
    app: testing-api-deployment
spec:
  selector:
    matchLabels:
      app: testing-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  testing-api-deployment
      labels:
        app: testing-api
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: testing-api
        image: asskit/testing_api:latest
        imagePullPolicy: IfNotPresent 
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - name: web
          containerPort: 8080
---
