kuberneties/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-api-service
  namespace: testing-api
spec:
  selector:
    app: testingApi
  ports:
  - name: http
    targetPort: 8080
    port: 80
---
