kuberneties/3-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: TestingApi-ingress
  namespace: TestingApi
  annotations:
    kubernetes.io/ingress.class: traefik-external
    link.argocd.argoproj.io/external-link: 'https://testapi.nzdev.org/'
spec:
  entryPoints:
    - websecure

  routes:    
    - match: Host(`testapi.nzdev.org`)
      kind: Rule
      services:
        - name: TestingApi-service
          port: 80
